[package]
name = "binix"
version = "0.1.0"
edition = "2024"
description = "Ultra-High-Performance Web Browser"
license = "MIT"
authors = ["Binix Team"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
html5ever = "0.36.1"
markup5ever = "0.36.1"
url = "2.5.7"
cssparser = "0.36.0"
selectors = "0.33.0"
reqwest = { version = "0.12.25", features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
wgpu = "27.0.1"
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.17"
boa_engine = "0.21.0"
boa_gc = "0.21.0"
winit = "0.30.12"
egui = "0.33.3"
eframe = "0.33.3"
wasmtime = "39.0.1"
wasmtime-wasi = "39.0.1"

# Core dependencies will be added as we build the browser
# See docs/browser_technical_specification.md for full list

[dev-dependencies]
# Benchmarking - statistical performance testing
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing - automatic test case generation
proptest = "1.4"

# Async testing utilities
tokio-test = "0.4"

# Test utilities
pretty_assertions = "1.4"

# Mocking framework
mockall = "0.12"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true
