[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nic69Han"]
license = "GPL-3.0"

[workspace.dependencies]
thiserror = "2.0"
log = "0.4"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "http2", "json"] }
html5ever = "0.36"
markup5ever_rcdom = "0.36"
cssparser = "0.36"
selectors = "0.33"
taffy = "0.9"
wgpu = "27.0"
boa_engine = "0.21"
egui = "0.33"
eframe = "0.33"
async-trait = "0.1"