[package]
name = "binix-net"
version = "0.1.0"
edition = "2021"

[dependencies]
binix-core = { path = "../binix-core" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"